Refactored messages types.
