# internal/storage/types/msg_type.go
@@ -5,19 +5,19 @@ type MsgType string
 
 // supported message types
 const (
-	MsgTypeUnknown                      MsgType = "Unknown"
-	MsgTypeWithdrawValidatorCommission  MsgType = "WithdrawValidatorCommission"
-	MsgTypeWithdrawDelegatorReward      MsgType = "WithdrawDelegatorReward"
-	MsgTypeEditValidator                MsgType = "EditValidator"
-	MsgTypeBeginRedelegate              MsgType = "BeginRedelegate"
-	MsgTypeCreateValidator              MsgType = "CreateValidator"
-	MsgTypeDelegate                     MsgType = "Delegate"
-	MsgTypeUndelegate                   MsgType = "Undelegate"
-	MsgTypeUnjail                       MsgType = "Unjail"
-	MsgTypeSend                         MsgType = "Send"
-	MsgTypeCreateVestingAccount         MsgType = "CreateVestingAccount"
-	MsgTypeCreatePeriodicVestingAccount MsgType = "CreatePeriodicVestingAccount"
-	MsgTypePayForBlobs                  MsgType = "PayForBlobs"
+	MsgTypeUnknown                      MsgType = "MsgUnknown"
+	MsgTypeWithdrawValidatorCommission  MsgType = "MsgWithdrawValidatorCommission"
+	MsgTypeWithdrawDelegatorReward      MsgType = "MsgWithdrawDelegatorReward"
+	MsgTypeEditValidator                MsgType = "MsgEditValidator"
+	MsgTypeBeginRedelegate              MsgType = "MsgBeginRedelegate"
+	MsgTypeCreateValidator              MsgType = "MsgCreateValidator"
+	MsgTypeDelegate                     MsgType = "MsgDelegate"
+	MsgTypeUndelegate                   MsgType = "MsgUndelegate"
+	MsgTypeUnjail                       MsgType = "MsgUnjail"
+	MsgTypeSend                         MsgType = "MsgSend"
+	MsgTypeCreateVestingAccount         MsgType = "MsgCreateVestingAccount"
+	MsgTypeCreatePeriodicVestingAccount MsgType = "MsgCreatePeriodicVestingAccount"
+	MsgTypePayForBlobs                  MsgType = "MsgPayForBlobs"
 )
 
 var availiableMsgTypes = map[string]struct{}{
